--- a/pages/talks.html
+++ b/pages/talks.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:og="http://ogp.me/ns#"
-      xmlns:fb="https://www.facebook.com/2008/fbml">
+      xmlns:fb="https://www.facebook.com/2008/fbml"
+      itemscope itemtype="http://schema.org/BlogPosting">
 <head>
     <title>Talks - Ícaro Medeiros</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
 
     <!-- Open Graph tags -->
         <meta property="og:site_name" content="Ícaro Medeiros" />
@@ -142,6 +143,17 @@
         </div>
     </section>
         </div>
+        <div class="col-sm-3 aboutme" id="aboutme">
+    <p>
+        <img width="100%" class="img-thumbnail" src="images/avatar.png"/>
+    </p>
+<p>
+    <strong>About <span itemprop="author">Ícaro Medeiros</span></strong><br/>
+    
+Software Engineer at <a href="http://www.globo.com">Globo.com</a><br/>
+PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
+
+</p>        </div>
         <div class="col-sm-3 well well-sm" id="sidebar">
 
 <aside>
