--- a/a-fantastica-fabrica-de-conhecimento.html
+++ b/a-fantastica-fabrica-de-conhecimento.html
@@ -11,8 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <a href="https://plus.google.com/+ÍcaroMedeiros?rel=author">Google</a>
-
     <!-- Open Graph tags -->
         <meta property="og:site_name" content="Ícaro Medeiros" />
             <meta property="og:type" content="article"/>
@@ -163,7 +161,8 @@ Não se pode dizer que "tinto suave" é uma sub-categoria de "tinto".</p>
     <img width="80%" class="img-thumbnail" src="http://www.icaromedeiros.com.br/images/avatar.png"/>
     </p>
 <p>
-    <strong>About <span itemprop="author">Ícaro Medeiros</span></strong><br/>
+    <strong>About <a href="https://plus.google.com/+ÍcaroMedeiros?rel=author" itemprop="author">Ícaro Medeiros</a></strong><br/>
+
     
 Software Engineer at <a href="http://www.globo.com">Globo.com</a><br/>
 PhD candidate at <a href="http://www.inf.puc-rio.br">PUC-RIO</a><br/>
