--- a/aprendizagem-de-ontologias.html
+++ b/aprendizagem-de-ontologias.html
@@ -173,7 +173,7 @@ Descoberta | População | Enriquecimento) de ontologias, com algumas diferença
     <section class="comments" id="comments">
         <h2>Comments</h2>
 
-        <div id="disqus_thread"></div>
+        <div itemprop="comments" id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'icaromedeiros'; // required: replace example with your forum shortname
