--- a/e-se-os-filosofos-fossem-programadores.html
+++ b/e-se-os-filosofos-fossem-programadores.html
@@ -206,7 +206,7 @@ A obsessão de Kant pela beleza e a estética faz dele o primeiro programador Py
     <section class="comments" id="comments">
         <h2>Comments</h2>
 
-        <div id="disqus_thread"></div>
+        <div itemprop="comments" id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'icaromedeiros'; // required: replace example with your forum shortname
