--- a/master-thesis.html
+++ b/master-thesis.html
@@ -148,7 +148,7 @@
     <section class="comments" id="comments">
         <h2>Comments</h2>
 
-        <div id="disqus_thread"></div>
+        <div itemprop="comments" id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'icaromedeiros'; // required: replace example with your forum shortname
