--- a/rss-e-twitter-no-mesmo-ciberespaco.html
+++ b/rss-e-twitter-no-mesmo-ciberespaco.html
@@ -145,7 +145,7 @@ dos panos, tá lá o RSS).</p>
     <section class="comments" id="comments">
         <h2>Comments</h2>
 
-        <div id="disqus_thread"></div>
+        <div itemprop="comments" id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'icaromedeiros'; // required: replace example with your forum shortname
