--- a/wolfram-alpha-voce-pergunta-a-web-responde.html
+++ b/wolfram-alpha-voce-pergunta-a-web-responde.html
@@ -190,7 +190,7 @@ Vamos ver o que as próximas semanas aguardam e quando o sistema for lançado eu
     <section class="comments" id="comments">
         <h2>Comments</h2>
 
-        <div id="disqus_thread"></div>
+        <div itemprop="comments" id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'icaromedeiros'; // required: replace example with your forum shortname
