--- a/archives.html
+++ b/archives.html
@@ -77,29 +77,29 @@
         <h1>Archives for Ícaro Medeiros</h1>
 
         <dl>
-                <dt>Dom 10 Agosto 2014</dt>
+                <dt>Sun 10 August 2014</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/im-back.html'>I'm back</a></dd>
-                <dt>Qua 23 Setembro 2009</dt>
+                <dt>Wed 23 September 2009</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/master-thesis.html'>Master thesis</a></dd>
-                <dt>Qui 03 Setembro 2009</dt>
+                <dt>Thu 03 September 2009</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/microformatos.html'>Microformatos</a></dd>
-                <dt>Qui 20 Agosto 2009</dt>
+                <dt>Thu 20 August 2009</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/4-anos-de-debian-festival.html'>4 anos de Debian Festival</a></dd>
-                <dt>Ter 12 Maio 2009</dt>
+                <dt>Tue 12 May 2009</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/rss-e-twitter-no-mesmo-ciberespaco.html'>RSS e Twitter no mesmo (ciber)espaço</a></dd>
-                <dt>Qua 06 Maio 2009</dt>
+                <dt>Wed 06 May 2009</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/wolfram-alpha-voce-pergunta-a-web-responde.html'>Wolfram Alpha - Você pergunta, a Web responde!?</a></dd>
-                <dt>Ter 21 Abril 2009</dt>
+                <dt>Tue 21 April 2009</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/e-se-os-filosofos-fossem-programadores.html'>E se os filósofos fossem programadores?</a></dd>
-                <dt>Qui 04 Dezembro 2008</dt>
+                <dt>Thu 04 December 2008</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/sugestao-de-tags.html'>Sugestão de tags</a></dd>
-                <dt>Qui 13 Novembro 2008</dt>
+                <dt>Thu 13 November 2008</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/web-semantica-e-o-efeito-do-fax.html'>Web Semântica e o efeito do Fax</a></dd>
-                <dt>Qua 05 Novembro 2008</dt>
+                <dt>Wed 05 November 2008</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/o-jogo-dos-metadados.html'>O jogo dos (meta)dados</a></dd>
-                <dt>Sex 31 Outubro 2008</dt>
+                <dt>Fri 31 October 2008</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/aprendizagem-de-ontologias.html'>Aprendizagem de Ontologias</a></dd>
-                <dt>Qui 23 Outubro 2008</dt>
+                <dt>Thu 23 October 2008</dt>
                 <dd><a href='http://www.icaromedeiros.com.br/a-fantastica-fabrica-de-conhecimento.html'>A fantástica fábrica de conhecimento</a></dd>
         </dl>
     </section>
